CHANGELOG
=========

3.0-dev
-------

  - [TASK] Add rewrite rule backward compatibility for Neos 1.2

3.0.0
-----

  - [FEATURE]   Add Redis container and example configuration for Flow caches
  - [TASK]      Add docker host IP to /etc/hosts of container
  - [TASK]      Check for docker and docker-compose when running dockerflow
  - [FEATURE]   Extend db entrypoint to support multiple database creation
  - [TASK]      Create nginx vhost for testing context
  - [TASK]      Add libcurl
  - [BUGFIX]    Flow context doesn't pass through the one-off command
  - [!!!BUGFIX] Fix Ngnix config for resources to work with Neos 2.0

0.0.2
-----

  - [TASK]    Install php module for imagemagick
  - [!!!TASK] Use official mariadb repositories (Sebastian Helzle)
  - [TASK]    Switch from fig to docker-compose (Sebastian Helzle)

0.0.1
-----

  - [TASK]    Update readme to include tests and database access docs
  - [FEATURE] Replace sendmail with mailhog container
  - [TASK]    Install sqlite for Flow testing
  - [TASK]    Map database port outside
  - [BUGFIX]  Error when running bin/dockerflow flow
  - [TASK]    Define hostname for sendmail
  - [TASK]    Helper to run flow commands directly
  - [BUGFIX]  Run entrypoint and command with bash
  - [TASK]    Auto create user in app container
  - [TASK]    Added sendmail to app container
  - [BUGFIX]  Allow output of non-php files in Web folder
  - [TASK]    Only show host info when running "up"
  - [TASK]    Change name for fig wrapper binary
  - [TASK]    Use bash instead of shell in bin/fig
  - [TASK]    Update readme & changed hostname to dockerflow
  - [BUGFIX]  Bad substitution in fig.sh on linux
  - [TASK]    Simplify dockerflow setup and config
  - [REF]     Clean up of config files
  - [TASK]    Added shell wrapper for fig to bin
  - [TASK]    Removed apache configs and test files
  - [TASK]    Add composer file
  - [TASK]    Using data container for persistence
  - [TASK]    Added gd lib to app container