@@ -4,7 +4,8 @@ CHANGELOG
 3.0-dev
 -------
 
-  - [TASK] Add rewrite rule backward compatibility for Neos 1.2
+  - [FEATURE] Add elasticsearch container
+  - [TASK]    Add rewrite rule backward compatibility for Neos 1.2
 
 3.0.0
 -----
